# nord_vision

./: CMakeLists.txt  package.xml
data/pixel_hue_sat/: rbf_svm_g0_0001_C21_N5000.pkl  rbf_svm_g0_0001_C464158.pkl  rbf_svm_g0_0001_C464158_lookuptable.pkl  svm.py  visualize.py
scripts/: HueSatClass.py  ImageObjectFilter.py  blob_detector_color_classifier.py  classification_client.py  classification_server.py  evidence_client.py  evidence_server.py  hue_sat_client.py  hue_sat_server.py  yalt.py
